# ampa-nmda-networks

./: .gitignore  Meeting Tilo 22.10  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  tests.yml
scripts/iteration_10_meanfield_limit/: compute_equations_root.py  scripts_meanfield_limit.py
scripts/iteration_4_conductance_based_model/: test_grid_generation.py  test_model_with_ampa_gaba.py
scripts/iteration_7_one_compartment_step_input/: test_up_down.py
scripts/iteration_8_compute_mean_steady_state/: scripts_and_computations_steady_state.py  scripts_with_wang_numbers.py
source/: 1-intro-to-brian-neurons.ipynb  Configuration.py  Plotting.py  it_1_brunel_example_tutorial.py  it_3_high_input_produces_bifurcation.py
source/iteration_4_conductance_based_model/: Prepare_Meeting_With_Prof_Schwalger.ipynb  Questions.py  Scan_of_Various_Parameters.ipynb  (+2 more)
src/: BinarySeach.py  Configuration.py  Configuration_with_Up_Down_States.py  Plotting.py  Setup.py  it_0_brunel_example_working.py  it_2_richardson.py  it_4_nmda_model.py  it_4_tau_m_25_ms.py  meeting_prof_schwalger_19_11.py  models.py  utils.py
tests/: Brian2Tests.py  ConfigurationTests.py  MatplotlibIntegrationTests.py  MatplotlibTests.py  Understand_Syncronization_For_High_Input.py  it_4_lower_g_leak_for_tau_m_25_ms.py  test_a_matplotlib_not_blocking.py  test_brian2_integration.py  test_configuration.py  test_experiment_parsing.py  test_it_2.py  test_it_4_lower_g_leak_for_tau_m_25_ms.py  test_matplotlib_latex_text_generation.py  test_richardson_computations.py  test_setup.py
(+79 files in other folders)
